2008-07-27  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkeyring-operation.c:
	* gkr/seahorse-gkeyring-source.c:
	* gkr/seahorse-gkr-commands.vala:
	* libseahorse/libseahorse-c.vapi:
	* libseahorse/seahorse-commands.vala:
	* libseahorse/seahorse-operation.h:
	* libseahorse/seahorse-source.c:
	* libseahorse/seahorse-source.h:
	* libseahorse/seahorse-transfer-operation.c:
	* libseahorse/seahorse-unknown-source.c:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* pgp/Makefile.am:
	* pgp/seahorse-hkp-source.c:
	* pgp/seahorse-ldap-source.c:
	* pgp/seahorse-pgp-commands.vala:
	* pgp/seahorse-pgp-delete.c: (removed)
	* pgp/seahorse-pgp-dialogs.h:
	* pgp/seahorse-pgp-key.c:
	* pgp/seahorse-pgp-key-properties.c:
	* pgp/seahorse-pgp-operation.c:
	* pgp/seahorse-pgp-source.c:
	* src/seahorse-viewer.vala:
	* ssh/seahorse-delete.c: (removed)
	* ssh/seahorse-ssh-commands.vala:
	* ssh/seahorse-ssh-operation.c:
	* ssh/seahorse-ssh-source.c: Refactor the delete code so it 
	returns proper operations and handles identities properly.
	
2008-07-27  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-progress.c: Fix reference counting
	problem on operations.
	
2008-07-26  Stef Walter  <stef@memberwebs.com>

	* pkcs11/gp11.vapi:
	* pkcs11/Makefile.am:
	* pkcs11/p11.vapi: (added)
	* pkcs11/seahorse-pkcs11.vala:
	* bugs.vapi: Add functions for converting from a seahorse object
	id (quark) to a set of attributes that uniquely identifies a
	PKCS#11 object.
	
2008-07-26  Stef Walter  <stef@memberwebs.com>

	* ssh/seahorse-algo.c:
	* ssh/seahorse-algo.h:
	* ssh/seahorse-ssh-key-data.c: Use base64 encoding functions
	in GLib rather than including our own.
	
2008-07-23  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * ssh/Makefile.am: Include socket libraries.  Patch from Jeff Cai.
    Fixes bug #544267
    * libseahorse/seahorse-dns-sd.c: Fix empty struct.
    Patch from Jeff Cai.  Fixes bug #544266