@@ -1,5 +1,10 @@
 2008-07-27  Stef Walter  <stef@memberwebs.com>
 
+	* src/seahorse-viewer.vala: Close the about dialog when 
+	close button is clicked. Fixes bug #544350
+	
+2008-07-27  Stef Walter  <stef@memberwebs.com>
+
 	* gkr/seahorse-gkeyring-operation.c:
 	* gkr/seahorse-gkeyring-source.c:
 	* gkr/seahorse-gkr-commands.vala:
